<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:text="@string/settingsSaveAdditionalDataCheckBoxText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSaveAdditionalDataCheckBox" />

    <TextView
        android:text="@string/settingsServerURLAddressTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSaveURLAddressLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/settingsURLAddressEditText" />

    <TextView
        android:text="@string/settingsServerURLAddressTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSaveDefaultBunch" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/settingsDefaultBunchEditText" />

    <CheckBox
        android:text="@string/settingsServerShowDataOnScreenTextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsSaveShowAdditionalDataOnScreenCheckBox" />

    <TextView
        android:text="@string/settingsVideoSavedFramesPerSecondLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsVideoSavedFramesPerSecondLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:id="@+id/settingsVideoSavedFramesPerSecondEditText" />

    <CheckBox
        android:text="@string/settingsDeleteVideoAfterProcessingCheckBoxText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsDeleteVideoAfterProcessingCheckBox" />
</LinearLayout>