<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/mediaFragmentDisplaySurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/mediaFragmentUpToolbar">

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:onClick="goToSettingsActivityAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="15dp"
                    android:id="@+id/mediaFragmentSettingsButton" />

                <ImageView
                    android:onClick="goToMainAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/mediaFragmentMainButton" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@+id/mediaFragmentCenterSpace"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/mediaFragmentChangeCameraButton"
                    android:layout_alignParentTop="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/mediaFragmentCenterSpace"
                    android:layout_marginRight="50dp"
                    android:id="@+id/mediaFragmentLightButton"
                    android:layout_alignParentTop="true" />

                <Space
                    android:id="@+id/mediaFragmentCenterSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/mediaFragmentDownToolbar"
            android:layout_alignParentBottom="true">

            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <ImageView
                    android:onClick="changeFragmentAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="15dp"
                    android:id="@+id/mediaFragmentChangeButton" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/mediaFragmentActionButton" />

                <ImageView
                    android:onClick="goToGalleryActivityAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:id="@+id/mediaFragmentGalleryButton" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <Button
            android:text="@string/mediaFragmentZoomInButtonText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:layout_below="@+id/mediaFragmentUpToolbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/mediaFragmentZoomIn" />

        <Button
            android:text="@string/mediaFragmentZoomOutButtonText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/colorToolbar"
            android:layout_below="@+id/mediaFragmentZoomIn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/mediaFragmentZoomOut" />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@color/colorToolbar"
            android:layout_above="@+id/mediaFragmentDownToolbar"
            android:id="@+id/mediaFragmentOrientationBar"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:visibility="invisible">

            <TextView
                android:text="@string/mediaFragmentAzimuthDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:id="@+id/mediaFragmentOrientationAzimuthLabel"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:text="@string/mediaFragmentPitchDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:id="@+id/mediaFragmentOrientationPitchLabel"
                android:layout_below="@+id/mediaFragmentOrientationAzimuthLabel"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/mediaFragmentOrientationAzimuthTextBar"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mediaFragmentOrientationPitchTextBar"
                android:layout_below="@+id/mediaFragmentOrientationAzimuthTextBar"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/mediaFragmentOrientationAzimuthTextBar" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>